--- a/single-courses.html
+++ b/single-courses.html
@@ -73,10 +73,10 @@
                             <nav class="site-navigation flex justify-content-end align-items-center">
                                 <ul class="flex flex-column flex-lg-row justify-content-lg-end align-content-center">
                                     <li class="current-menu-item"><a href="index.html">Home</a></li>
-                                    <li><a href="#">About</a></li>
-                                    <li><a href="#">Courses</a></li>
-                                    <li><a href="#">blog</a></li>
-                                    <li><a href="#">Contact</a></li>
+                                    <li><a href="./about.html">About</a></li>
+                                    <li><a href="./courses.html">Courses</a></li>
+                                    <li><a href="./blog.html">blog</a></li>
+                                    <li><a href="./contact.html">Contact</a></li>
                                 </ul>
 
                                 <div class="hamburger-menu d-lg-none">
