--- a/about.html
+++ b/about.html
@@ -29,38 +29,6 @@
     <div class="page-header">
         <header class="site-header">
             <header class="site-header">
-                <div class="top-header-bar">
-                    <div class="container-fluid">
-                        <div class="row">
-                            <div class="col-12 col-lg-6 d-none d-md-flex flex-wrap justify-content-center justify-content-lg-start mb-3 mb-lg-0">
-                                <div class="header-bar-email d-flex align-items-center">
-                                    <i class="fa fa-envelope"></i><a href="#">tuanna.design@gmail.com</a>
-                                </div><!-- .header-bar-email -->
-
-                                <div class="header-bar-text lg-flex align-items-center">
-                                    <p><i class="fa fa-phone"></i>001-1234-88888 </p>
-                                </div><!-- .header-bar-text -->
-                            </div><!-- .col -->
-
-                            <div class="col-12 col-lg-6 d-flex flex-wrap justify-content-center justify-content-lg-end align-items-center">
-                                <div class="header-bar-search">
-                                    <form class="flex align-items-stretch">
-                                        <input type="search" placeholder="What would you like to learn?">
-                                        <button type="submit" value="" class="flex justify-content-center align-items-center"><i class="fa fa-search"></i></button>
-                                    </form>
-                                </div><!-- .header-bar-search -->
-
-                                <div class="header-bar-menu">
-                                    <ul class="flex justify-content-center align-items-center py-2 pt-md-0">
-                                        <li><a href="#">Register</a></li>
-                                        <li><a href="#">Login</a></li>
-                                    </ul>
-                                </div><!-- .header-bar-menu -->
-                            </div><!-- .col -->
-                        </div><!-- .row -->
-                    </div><!-- .container-fluid -->
-                </div><!-- .top-header-bar -->
-
                 <div class="nav-bar">
                     <div class="container">
                         <div class="row">
@@ -73,9 +41,8 @@
                             <div class="col-3 col-lg-9 flex justify-content-end align-content-center">
                                 <nav class="site-navigation flex justify-content-end align-items-center">
                                     <ul class="flex flex-column flex-lg-row justify-content-lg-end align-content-center">
-                                        <li class="current-menu-item"><a href="index.html">Home</a></li>
-                                        <li><a href="./about.html">About</a></li>
-                                        <li><a href="./courses.html">Courses</a></li>
+                                        <li><a href="index.html">Home</a></li>
+                                        <li class="current-menu-item"><a href="./about.html">About</a></li>
                                         <li><a href="./blog.html">blog</a></li>
                                         <li><a href="./contact.html">Contact</a></li>
                                     </ul>
@@ -87,9 +54,7 @@
                                         <span></span>
                                     </div><!-- .hamburger-menu -->
 
-                                    <div class="header-bar-cart">
-                                        <a href="#" class="flex justify-content-center align-items-center"><span aria-hidden="true" class="icon_bag_alt"></span></a>
-                                    </div><!-- .header-bar-search -->
+                                
                                 </nav><!-- .site-navigation -->
                             </div><!-- .col -->
                         </div><!-- .row -->
