--- a/single-courses.html
+++ b/single-courses.html
@@ -72,9 +72,8 @@
                         <div class="col-3 col-lg-9 flex justify-content-end align-content-center">
                             <nav class="site-navigation flex justify-content-end align-items-center">
                                 <ul class="flex flex-column flex-lg-row justify-content-lg-end align-content-center">
-                                    <li class="current-menu-item"><a href="index.html">Home</a></li>
+                                    <li><a href="index.html">Home</a></li>
                                     <li><a href="./about.html">About</a></li>
-                                    <li><a href="./courses.html">Courses</a></li>
                                     <li><a href="./blog.html">blog</a></li>
                                     <li><a href="./contact.html">Contact</a></li>
                                 </ul>
@@ -86,9 +85,7 @@
                                     <span></span>
                                 </div><!-- .hamburger-menu -->
 
-                                <div class="header-bar-cart">
-                                    <a href="#" class="flex justify-content-center align-items-center"><span aria-hidden="true" class="icon_bag_alt"></span></a>
-                                </div><!-- .header-bar-search -->
+                            
                             </nav><!-- .site-navigation -->
                         </div><!-- .col -->
                     </div><!-- .row -->
