--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
                     <div class="row">
                         <div class="col-9 col-lg-3">
                             <div class="site-branding">
-                                <h1 class="site-title"><a href="index.html" rel="home">Ezu<span>ca</span></a></h1>
+                                <h1 class="site-title"><a href="index.html" rel="home">Epo<span>ch</span></a></h1>
                             </div><!-- .site-branding -->
                         </div><!-- .col -->
 
@@ -90,7 +90,7 @@
         <div class="row justify-content-between">
             <div class="col-12">
                 <div class="contact-gmap">
-                    <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyAyCkIjViJ_7vt5PMIHai_NjcdR64QYycw&q=Space+Needle,Seattle+WA" allowfullscreen></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m16!1m12!1m3!1d3878.653648320143!2d80.02383081414102!3d13.556825905435835!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!2m1!1siiit%20sri%20city!5e0!3m2!1sen!2sin!4v1587632389259!5m2!1sen!2sin" width="700" height="350" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
                 </div><!-- .contact-gmap -->
             </div><!-- .col -->
 
@@ -112,12 +112,10 @@
                 <div class="contact-info">
                     <h3>Contact Information</h3>
 
-                    <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia dese mollit anim id est laborum. </p>
-
                     <ul class="p-0 m-0">
-                        <li><span>Location:</span>40 Baria Sreet 133/2 NewYork City, US</li>
-                        <li><span>Email:</span><a href="#">info.deeercreative@gmail.com</a></li>
-                        <li><span>Phone:</span><a href="#">(203) 123-6666</a></li>
+                        <li><span>Location:</span>IIIT Sri City, Chittoor</li>
+                        <li><span>Email:</span><a href="#">aiml.club@iiits.in</a></li>
+                        <!-- <li><span>Phone:</span><a href="#">(203) 123-6666</a></li> -->
                     </ul>
                 </div><!-- .contact-info -->
             </div><!-- .col -->
@@ -129,24 +127,9 @@
             <div class="row">
                 <div class="col-12 flex flex-wrap justify-content-center justify-content-lg-between align-items-center">
                     <div class="logo-wrap">
-                        <img src="images/logo-1.png" alt="">
+                        <img src="images/logo1.png" alt="">
                     </div><!-- .logo-wrap -->
 
-                    <div class="logo-wrap">
-                        <img src="images/logo-2.png" alt="">
-                    </div><!-- .logo-wrap -->
-
-                    <div class="logo-wrap">
-                        <img src="images/logo-3.png" alt="">
-                    </div><!-- .logo-wrap -->
-
-                    <div class="logo-wrap">
-                        <img src="images/logo-4.png" alt="">
-                    </div><!-- .logo-wrap -->
-
-                    <div class="logo-wrap">
-                        <img src="images/logo-5.png" alt="">
-                    </div><!-- .logo-wrap -->
                 </div><!-- .col -->
             </div><!-- .row -->
         </div><!-- .container -->
@@ -158,9 +141,9 @@
                 <div class="row">
                     <div class="col-12 col-md-6 col-lg-3">
                         <div class="foot-about">
-                            <a class="foot-logo" href="#"><img src="images/foot-logo.png" alt=""></a>
+                            <h1><a href="index.html" rel="home">Epo<span>ch</span></a></h1>
 
-                            <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia dese mollit anim id est laborum. </p>
+                            <p>Planting decision trees in random forests</p>
 
                             <p class="footer-copyright"><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
 Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
@@ -168,36 +151,18 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                         </div><!-- .foot-about -->
                     </div><!-- .col -->
 
+                    <div class="col-12 col-md-6 col-lg-3 mt-5 mt-lg-0"></div>
+
                     <div class="col-12 col-md-6 col-lg-3 mt-5 mt-md-0">
                         <div class="foot-contact">
                             <h2>Contact Us</h2>
 
                             <ul>
-                                <li>Email: info.deertcreative@gmail.com</li>
-                                <li>Phone: (+88) 111 555 666</li>
-                                <li>Address: 40 Baria Sreet 133/2 NewYork City, US</li>
+                                <li>Email: aiml.club@iiits.in</li>
+                                <!-- <li>Phone: (+88) 111 555 666</li> -->
+                                <li>Address: IIIT Sri City, Chittoor.</li>
                             </ul>
                         </div><!-- .foot-contact -->
-                    </div><!-- .col -->
-
-                    <div class="col-12 col-md-6 col-lg-3 mt-5 mt-lg-0">
-                        <div class="quick-links flex flex-wrap">
-                            <h2 class="w-100">Quick Links</h2>
-
-                            <ul class="w-50">
-                                <li><a href="#">About </a></li>
-                                <li><a href="#">Terms of Use </a></li>
-                                <li><a href="#">Privacy Policy </a></li>
-                                <li><a href="#">Contact Us</a></li>
-                            </ul>
-
-                            <ul class="w-50">
-                                <li><a href="#">Documentation</a></li>
-                                <li><a href="#">Forums</a></li>
-                                <li><a href="#">Language Packs</a></li>
-                                <li><a href="#">Release Status</a></li>
-                            </ul>
-                        </div><!-- .quick-links -->
                     </div><!-- .col -->
 
                     <div class="col-12 col-md-6 col-lg-3 mt-5 mt-lg-0">
@@ -215,30 +180,6 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                 </div><!-- .row -->
             </div><!-- .container -->
         </div><!-- .footer-widgets -->
-
-        <div class="footer-bar">
-            <div class="container">
-                <div class="row flex-wrap justify-content-center justify-content-lg-between align-items-center">
-                    <div class="col-12 col-lg-6">
-                        <div class="download-apps flex flex-wrap justify-content-center justify-content-lg-start align-items-center">
-                            <a href="#"><img src="images/app-store.png" alt=""></a>
-                            <a href="#"><img src="images/play-store.png" alt=""></a>
-                        </div><!-- .download-apps -->
-
-                    </div>
-
-                    <div class="col-12 col-lg-6 mt-4 mt-lg-0">
-                        <div class="footer-bar-nav">
-                            <ul class="flex flex-wrap justify-content-center justify-content-lg-end align-items-center">
-                                <li><a href="#">DPA</a></li>
-                                <li><a href="#">Terms of Use</a></li>
-                                <li><a href="#">Privacy Policy</a></li>
-                            </ul>
-                        </div><!-- .footer-bar-nav -->
-                    </div><!-- .col-12 -->
-                </div><!-- .row -->
-            </div><!-- .container -->
-        </div><!-- .footer-bar -->
     </footer><!-- .site-footer -->
 
     <script type='text/javascript' src='js/jquery.js'></script>
