--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
                         <div class="row">
                             <div class="col-9 col-lg-3">
                                 <div class="site-branding">
-                                    <h1 class="site-title"><a href="index.html" rel="home">Ezu<span>ca</span></a></h1>
+                                    <h1 class="site-title"><a href="index.html" rel="home">Epo<span>ch</span></a></h1>
                                 </div><!-- .site-branding -->
                             </div><!-- .col -->
 
