Logo position fixed

--- a/contact.html
+++ b/contact.html
@@ -126,10 +126,18 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 flex flex-wrap justify-content-center justify-content-lg-between align-items-center">
+                  
+                    <div class="logo-wrap">
+                        <img src="" alt="">
+                    </div><!-- .logo-wrap -->
+                  
                     <div class="logo-wrap">
                         <img src="images/logo1.png" alt="">
                     </div><!-- .logo-wrap -->
 
+                    <div class="logo-wrap">
+                        <img src="" alt="">
+                    </div><!-- .logo-wrap -->
                 </div><!-- .col -->
             </div><!-- .row -->
         </div><!-- .container -->
