--- a/blog.html
+++ b/blog.html
@@ -34,8 +34,9 @@
                     <div class="row">
                         <div class="col-9 col-lg-3">
                             <div class="site-branding">
-                                <h1 class="site-title"><a href="index.html" rel="home">Epo<span>ch</span></a></h1>
-                            </div><!-- .site -->
+                                <!-- <h1 class="site-title"><a href="index.html" rel="home">Epo<span>ch</span></a></h1> -->
+                                <a href="./index.html"><img style="height:10vh" src="images/Epoch.png"></a>
+                            </div><!-- .site-branding -->
                         </div><!-- .col -->
 
                         <div class="col-3 col-lg-9 flex justify-content-end align-content-center">
