--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,8 @@
                     <div class="row">
                         <div class="col-9 col-lg-3">
                             <div class="site-branding">
-                                <h1 class="site-title"><a href="index.html" rel="home">Epo<span>ch</span></a></h1>
+                                <!-- <h1 class="site-title"><a href="index.html" rel="home">Epo<span>ch</span></a></h1> -->
+                                <a href="./index.html"><img style="height:10vh" src="images/Epoch.png"></a>
                             </div><!-- .site-branding -->
                         </div><!-- .col -->
 
