--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 <div class="col-12 flex flex-wrap justify-content-center justify-content-lg-between align-items-center">
                   
                     <div class="logo-wrap">
-                        <img src=""" alt="">
+                        <img src="" alt="">
                     </div><!-- .logo-wrap -->
                   
                     <div class="logo-wrap">
