--- a/about.html
+++ b/about.html
@@ -131,8 +131,8 @@
 
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="team-member">
-                    <img src="images/team/Parth.jpg" alt="">
-                    
+                    <img src="./images/team/Parth.jpg" alt="">
+
                     <h3>Parth Patwa</h3>
                     <h4>Materials</h4>
 
@@ -143,7 +143,7 @@
 
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="team-member">
-                    <img src="images/team/Sravan.jpg" alt="">
+                    <img src="./images/team/Sravan.jpg" alt="">
 
                     <h3>Sravan Kumar</h3>
                     <h4>WordPress</h4>
@@ -155,7 +155,7 @@
 
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="team-member">
-                    <img src="images/team/Riya.jpg" alt="">
+                    <img src="./images/team/Riya.jpg" alt="">
 
                     <h3>Riya Jain</h3>
                     <h4>Data Analysis</h4>
@@ -167,7 +167,7 @@
 
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="team-member">
-                    <img src="images/team/Raahul.jpg" alt="">
+                    <img src="./images/team/Raahul.jpg" alt="">
 
                     <h3>Raahul Singh</h3>
                     <h4>HTML CSS</h4>
@@ -180,7 +180,7 @@
         <div class = "row">
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="team-member">
-                    <img src="images/team/Shreyas.jpg" alt="">
+                    <img src="./images/team/Shreyas.jpg" alt="">
 
                     <h3>Shreyas MS</h3>
                     <h4>HTML CSS</h4>
@@ -192,7 +192,7 @@
 
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="team-member">
-                    <img src="images/team/Vikrant.jpeg" alt="">
+                    <img src="./images/team/Vikrant.jpeg" alt="">
 
                     <h3>Vikrant Reddy</h3>
                     <h4>HTML CSS</h4>
