--- a/about.html
+++ b/about.html
@@ -144,7 +144,7 @@
                 <div class="team-member">
                     <img src="./images/Team/Sravan.jpg" alt="">
 
-                    <h3>Sravan Kumar</h3>
+                    <h3>Sravan Vinakota</h3>
                     <h4>WordPress</h4>
 
                     <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
