--- a/about.html
+++ b/about.html
@@ -133,19 +133,7 @@
                     <img src="./images/Team/Parth.jpg" alt="">
 
                     <h3>Parth Patwa</h3>
-                    <h4>Materials</h4>
-
-                    <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
-                    </ul>
-                </div><!-- .team-member -->
-            </div><!-- .col -->
-
-            <div class="col-12 col-md-6 col-lg-3">
-                <div class="team-member">
-                    <img src="./images/Team/Sravan.jpg" alt="">
-
-                    <h3>Sravan Vinakota</h3>
-                    <h4>WordPress</h4>
+                    <h4>President and Founder</h4>
 
                     <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
                     </ul>
@@ -157,7 +145,19 @@
                     <img src="./images/Team/Riya.jpg" alt="">
 
                     <h3>Riya Jain</h3>
-                    <h4>Data Analysis</h4>
+                    <h4>Vice President</h4>
+
+                    <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
+                    </ul>
+                </div><!-- .team-member -->
+            </div><!-- .col -->
+
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="team-member">
+                    <img src="./images/Team/Sravan.jpg" alt="">
+
+                    <h3>Sravan Vinakota</h3>
+                    <h4>Core Member</h4>
 
                     <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
                     </ul>
@@ -169,7 +169,7 @@
                     <img src="./images/Team/Raahul.jpg" alt="">
 
                     <h3>Raahul Singh</h3>
-                    <h4>HTML CSS</h4>
+                    <h4>Core Member (Open Source)</h4>
 
                     <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
                     </ul>
@@ -182,7 +182,7 @@
                     <img src="./images/Team/Shreyas.jpg" alt="">
 
                     <h3>Shreyas MS</h3>
-                    <h4>HTML CSS</h4>
+                    <h4>Core Member</h4>
 
                     <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
                     </ul>
@@ -194,7 +194,7 @@
                     <img src="./images/Team/Vikrant.jpeg" alt="">
 
                     <h3>Vikrant Reddy</h3>
-                    <h4>HTML CSS</h4>
+                    <h4>Core Member (Marketing)</h4>
 
                     <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
                     </ul>
