--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
@@ -259,6 +259,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                             <h2>Follow Us</h2>
 
                             <ul class="follow-us flex flex-wrap align-items-center">
+                                <i class="fa fa-linkedin-square" style="font-size:36px"></i>
                                 <li><a href="#"><i class="fa fa-linkedin-in"></i></a></li>
                                 <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
