--- a/about.html
+++ b/about.html
@@ -259,11 +259,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                             <h2>Follow Us</h2>
                              <i style="font-size:24px" class="fa">&#xf08c;</i>
                             <ul class="follow-us flex flex-wrap align-items-center">
-                                <i class="fa fa-linkedin-square" style="font-size:36px"></i>
+                              <li> <a href = "https://in.linkedin.com/in/epoch-iiits-69a9091b5"> Linkedin </a></li>
+                              <li> <a href = "https://medium.com/@EpochIIITS"> Medium </a></li>
                                
-                                <li><a href="#"><i class="fa fa-linkedin-in"></i></a></li>
+                               <!-- <li><a href="#"><i class="fa fa-linkedin-in"></i></a></li>
+                                <i class="fa fa-linkedin-square" style="font-size:36px"></i>   
                                 <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                                <li><a href="#"><i class="fa fa-twitter"></i></a></li>
+                                <li><a href="#"><i class="fa fa-twitter"></i></a></li> -->
                             </ul>
                         </div><!-- .quick-links -->
                     </div><!-- .col -->
