--- a/about.html
+++ b/about.html
@@ -257,11 +257,13 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                     <div class="col-12 col-md-6 col-lg-3 mt-5 mt-lg-0">
                         <div class="follow-us">
                             <h2>Follow Us</h2>
-                             <i style="font-size:24px" class="fa">&#xf08c;</i>
-                            <ul class="follow-us flex flex-wrap align-items-center">
+                             
+                        <ul>
                               <li> <a href = "https://in.linkedin.com/in/epoch-iiits-69a9091b5"> Linkedin </a></li>
                               <li> <a href = "https://medium.com/@EpochIIITS"> Medium </a></li>
-                               
+                            </ul>
+                           <!-- <ul class="follow-us flex flex-wrap align-items-center">  -->  
+                            <!--<i style="font-size:24px" class="fa">&#xf08c;</i> -->
                                <!-- <li><a href="#"><i class="fa fa-linkedin-in"></i></a></li>
                                 <i class="fa fa-linkedin-square" style="font-size:36px"></i>   
                                 <li><a href="#"><i class="fa fa-instagram"></i></a></li>
