--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <div class="col-3 col-lg-9 flex justify-content-end align-content-center">
                             <nav class="site-navigation flex justify-content-end align-items-center">
                                 <ul class="flex flex-column flex-lg-row justify-content-lg-end align-content-center">
-                                    <li class="current-menu-item"><a href="index.html">Home</a></li>
+                                    <li class=""><a href="index.html">Home</a></li>
                                     <li><a href="./about.html">About</a></li>
                                     <li><a href="./blog.html">blog</a></li>
                                     <li><a href="./contact.html">Contact</a></li>
