--- a/index.html
+++ b/index.html
@@ -289,13 +289,17 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                     <div class="col-12 col-md-6 col-lg-3 mt-5 mt-lg-0">
                         <div class="follow-us">
                             <h2>Follow Us</h2>
-
+                        <ul>
+                              <li> <a href = "https://in.linkedin.com/in/epoch-iiits-69a9091b5"> Linkedin </a></li> <br>
+                              <li> <a href = "https://medium.com/@EpochIIITS"> Medium </a></li>
+                            </ul>
+                            <!--
                             <ul class="follow-us flex flex-wrap align-items-center">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                                 <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            </ul>
+                            </ul> -->
                         </div><!-- .quick-links -->
                     </div><!-- .col -->
                 </div><!-- .row -->
