--- a/contact.html
+++ b/contact.html
@@ -96,16 +96,18 @@
             </div><!-- .col -->
 
             <div class="col-12 col-lg-6">
+                
                 <div class="contact-form">
+                    <!--
                     <h3>Contact Form</h3>
-
+                     
                     <form>
                         <input type="text" placeholder="Your Name">
                         <input type="email" placeholder="Your Email">
                         <input type="text" placeholder="Subject">
                         <textarea placeholder="Your Message" rows="4"></textarea>
                         <input type="submit" value="Send Message">
-                    </form>
+                    </form> -->
                 </div><!-- .contact-form -->
             </div><!-- .col -->
 
