--- a/contact.html
+++ b/contact.html
@@ -117,7 +117,7 @@
 
                     <ul class="p-0 m-0">
                         <li><span>Location:</span>IIIT Sri City, Chittoor</li>
-                        <li><span>Email:</span><a href="#">aiml.club@iiits.in</a></li>
+                        <li><span>Email:</span>aiml.club@iiits.in</li>
                         <!-- <li><span>Phone:</span><a href="#">(203) 123-6666</a></li> -->
                     </ul>
                 </div><!-- .contact-info -->
