--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
             <div class="col-12">
                 <div class="breadcrumbs">
                     <ul class="flex flex-wrap align-items-center p-0 m-0">
-                        <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+                        <li><i class="fa fa-home"></i> Home</a></li>
                         <li>About</li>
                     </ul>
                 </div><!-- .breadcrumbs -->
@@ -259,7 +259,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                             <h2>Follow Us</h2>
                              
                         <ul>
-                              <li> <a href = "https://in.linkedin.com/in/epoch-iiits-69a9091b5"> Linkedin </a></li> <br>
+                              <li> <a href = "https://in.linkedin.com/in/epoch-iiits-69a9091b5"> Linkedin </a></li> 
                               <li> <a href = "https://medium.com/@EpochIIITS"> Medium </a></li>
                             </ul>
                            <!-- <ul class="follow-us flex flex-wrap align-items-center">  -->  
