--- a/contact.html
+++ b/contact.html
@@ -42,7 +42,7 @@
                         <div class="col-3 col-lg-9 flex justify-content-end align-content-center">
                             <nav class="site-navigation flex justify-content-end align-items-center">
                                 <ul class="flex flex-column flex-lg-row justify-content-lg-end align-content-center">
-                                    <li><a href="index.html">Home</a></li>
+                                    <li><a href="./index.html">Home</a></li>
                                     <li><a href="./about.html">about</a></li>
                                     <li><a href="./blog.html">blog</a></li>
                                     <li class="current-menu-item"><a href="./contact.html">Contact</a></li>
@@ -81,7 +81,7 @@
             <div class="col-12">
                 <div class="breadcrumbs">
                     <ul class="flex flex-wrap align-items-center p-0 m-0">
-                        <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+                        <li><i class="fa fa-home"></i> Home</li>
                         <li>Contact</li>
                     </ul>
                 </div><!-- .breadcrumbs -->
@@ -179,13 +179,17 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                     <div class="col-12 col-md-6 col-lg-3 mt-5 mt-lg-0">
                         <div class="follow-us">
                             <h2>Follow Us</h2>
-
+                        <ul>
+                              <li> <a href = "https://in.linkedin.com/in/epoch-iiits-69a9091b5"> Linkedin </a></li> <br>
+                              <li> <a href = "https://medium.com/@EpochIIITS"> Medium </a></li>
+                            </ul>
+                            <!--
                             <ul class="follow-us flex flex-wrap align-items-center">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                                 <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            </ul>
+                            </ul> -->
                         </div><!-- .quick-links -->
                     </div><!-- .col -->
                 </div><!-- .row -->
