--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                         <div class="follow-us">
                             <h2>Follow Us</h2>
                         <ul>
-                              <li> <a href = "https://in.linkedin.com/in/epoch-iiits-69a9091b5"> Linkedin </a></li> <br>
+                              <li> <a href = "https://in.linkedin.com/in/epoch-iiits-69a9091b5"> Linkedin </a></li> 
                               <li> <a href = "https://medium.com/@EpochIIITS"> Medium </a></li>
                             </ul>
                             <!--
