--- a/blog.html
+++ b/blog.html
@@ -42,7 +42,8 @@
                         <div class="col-3 col-lg-9 flex justify-content-end align-content-center">
                             <nav class="site-navigation flex justify-content-end align-items-center">
                                 <ul class="flex flex-column flex-lg-row justify-content-lg-end align-content-center">
-                                    <li class="current-menu-item"><a href="index.html">Home</a></li>
+                                    <li ><a href="index.html">Home</a></li>
+                                    <li><a href="./index.html">Home</a></li>
                                     <li><a href="./about.html">About</a></li>
                                     <li class="current-menu-item"><a href="./blog.html">blog</a></li>
                                     <li><a href="./contact.html">Contact</a></li>
@@ -81,7 +82,7 @@
             <div class="col-12">
                 <div class="breadcrumbs">
                     <ul class="flex flex-wrap align-items-center p-0 m-0">
-                        <li><a href="#"><i class="fa fa-home"></i> Home</a></li>
+                        <li><i class="fa fa-home"></i> Home</li>
                         <li>Blog Grid</li>
                     </ul>
                 </div><!-- .breadcrumbs -->
@@ -95,7 +96,7 @@
                         <div class="col-12 col-md-4 px-25">
                             <div class="blog-post-content">
                                 <figure class="blog-post-thumbnail position-relative m-0">
-                                    <a href="#"><img src="images/articles/article1.png" alt=""></a>
+                                    <img src="images/articles/article1.png" alt="">
 
                                     <div class="posted-date position-absolute">
                                         <div class="day">16</div>
@@ -209,12 +210,17 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                         <div class="follow-us">
                             <h2>Follow Us</h2>
 
+                        <ul>
+                              <li> <a href = "https://in.linkedin.com/in/epoch-iiits-69a9091b5"> Linkedin </a></li> 
+                              <li> <a href = "https://medium.com/@EpochIIITS"> Medium </a></li>
+                            </ul>
+                            <!--
                             <ul class="follow-us flex flex-wrap align-items-center">
                                 <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                                 <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                                 <li><a href="#"><i class="fa fa-instagram"></i></a></li>
                                 <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                            </ul>
+                            </ul> -->
                         </div><!-- .quick-links -->
                     </div><!-- .col -->
                 </div><!-- .row -->
