--- a/contact.html
+++ b/contact.html
@@ -42,10 +42,11 @@
                         <div class="col-3 col-lg-9 flex justify-content-end align-content-center">
                             <nav class="site-navigation flex justify-content-end align-items-center">
                                 <ul class="flex flex-column flex-lg-row justify-content-lg-end align-content-center">
+                                    <li class="current-menu-item"><a href="index.html">Home</a></li>
                                     <li><a href="./index.html">Home</a></li>
-                                    <li><a href="./about.html">about</a></li>
+                                    <li><a href="./about.html">About</a></li>
                                     <li><a href="./blog.html">blog</a></li>
-                                    <li class="current-menu-item"><a href="./contact.html">Contact</a></li>
+                                    <li><a href="./contact.html">Contact</a></li>
                                 </ul>
 
                                 <div class="hamburger-menu d-lg-none">
@@ -180,7 +181,7 @@ Copyright &copy;<script>document.write(new Date().getFullYear());</script> All r
                         <div class="follow-us">
                             <h2>Follow Us</h2>
                         <ul>
-                              <li> <a href = "https://in.linkedin.com/in/epoch-iiits-69a9091b5"> Linkedin </a></li> <br>
+                              <li> <a href = "https://in.linkedin.com/in/epoch-iiits-69a9091b5"> Linkedin </a></li> 
                               <li> <a href = "https://medium.com/@EpochIIITS"> Medium </a></li>
                             </ul>
                             <!--
