--- a/about.html
+++ b/about.html
@@ -176,7 +176,6 @@
             </div><!-- .col -->
         </div><!-- .row -->
         <div class = "row">
-            <div class ="col-12 col-lg-3"></div>
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="team-member">
                     <img src="./images/Team/Shreyas.jpg" alt="">
@@ -194,12 +193,25 @@
                     <img src="./images/Team/Vikrant.jpeg" alt="">
 
                     <h3>Vikrant Reddy</h3>
-                    <h4>Core Member (Marketing)</h4>
+                    <h4>Core Member</h4>
 
                     <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
                     </ul>
                 </div><!-- .team-member -->
             </div><!-- .col -->
+
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="team-member">
+                    <img src="./images/Team/Preethi.jpeg" alt="">
+
+                    <h3>Preethi Gurumurthy</h3>
+                    <h4>Core Member</h4>
+
+                    <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
+                    </ul>
+                </div><!-- .team-member -->
+            </div><!-- .col -->
+
         </div>
     </div><!-- .container -->
 
