Fixed Bugs and Updated Team

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
                                 </div><!-- .site-branding -->
                             </div><!-- .col -->
 
-                        <div class="col-4 col-lg-9 flex justify-content-end align-content-center">
+                        <div class="col-3 col-lg-9 flex justify-content-end align-content-center">
                             <nav class="site-navigation flex justify-content-end align-items-center">
                                 <ul class="flex flex-column flex-lg-row justify-content-lg-end align-content-center">
                                     <li><a href="./index.html">Home</a></li>
@@ -165,16 +165,17 @@
 
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="team-member">
-                    <img src="./images/Team/Raahul.jpg" alt="">
+                    <img src="./images/Team/Aditi.jpg" alt="">
 
-                    <h3>Raahul Singh</h3>
-                    <h4>Core Member (Open Source)</h4>
+                    <h3>Aditi Verma</h3>
+                    <h4>Core Member</h4>
 
                     <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
                     </ul>
                 </div><!-- .team-member -->
             </div><!-- .col -->
         </div><!-- .row -->
+        
         <div class = "row">
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="team-member">
@@ -205,6 +206,30 @@
                     <img src="./images/Team/Preethi.jpeg" alt="">
 
                     <h3>Preethi Gurumurthy</h3>
+                    <h4>Core Member</h4>
+
+                    <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
+                    </ul>
+                </div><!-- .team-member -->
+            </div><!-- .col -->
+
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="team-member">
+                    <img src="./images/Team/Surya.jpg" alt="">
+
+                    <h3>S Suryavardan</h3>
+                    <h4>Core Member</h4>
+
+                    <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
+                    </ul>
+                </div><!-- .team-member -->
+            </div><!-- .col -->
+
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="team-member">
+                    <img src="./images/Team/Sayam.jpg" alt="">
+
+                    <h3>Sayam Kumar</h3>
                     <h4>Core Member</h4>
 
                     <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
