--- a/about.html
+++ b/about.html
@@ -129,72 +129,10 @@
 
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="team-member">
-                    <img src="./images/Team/Parth.jpg" alt="">
-
-                    <h3>Parth Patwa</h3>
-                    <h4>President and Founder</h4>
-
-                    <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
-                    </ul>
-                </div><!-- .team-member -->
-            </div><!-- .col -->
-
-            <div class="col-12 col-md-6 col-lg-3">
-                <div class="team-member">
-                    <img src="./images/Team/Riya.jpg" alt="">
-
-                    <h3>Riya Jain</h3>
-                    <h4>Vice President</h4>
-
-                    <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
-                    </ul>
-                </div><!-- .team-member -->
-            </div><!-- .col -->
-
-            <div class="col-12 col-md-6 col-lg-3">
-                <div class="team-member">
-                    <img src="./images/Team/Sravan.jpg" alt="">
-
-                    <h3>Sravan Vinakota</h3>
-                    <h4>Core Member</h4>
-
-                    <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
-                    </ul>
-                </div><!-- .team-member -->
-            </div><!-- .col -->
-
-            <div class="col-12 col-md-6 col-lg-3">
-                <div class="team-member">
-                    <img src="./images/Team/Aditi.jpg" alt="">
-
-                    <h3>Aditi Verma</h3>
-                    <h4>Core Member</h4>
-
-                    <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
-                    </ul>
-                </div><!-- .team-member -->
-            </div><!-- .col -->
-        </div><!-- .row -->
-        
-        <div class = "row">
-            <div class="col-12 col-md-6 col-lg-3">
-                <div class="team-member">
                     <img src="./images/Team/Shreyas.jpg" alt="">
 
                     <h3>Shreyas MS</h3>
-                    <h4>Core Member</h4>
-
-                    <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
-                    </ul>
-                </div><!-- .team-member -->
-            </div><!-- .col -->
-
-            <div class="col-12 col-md-6 col-lg-3">
-                <div class="team-member">
-                    <img src="./images/Team/Vikrant.jpeg" alt="">
-
-                    <h3>Vikrant Reddy</h3>
-                    <h4>Core Member</h4>
+                    <h4>President</h4>
 
                     <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
                     </ul>
@@ -206,7 +144,7 @@
                     <img src="./images/Team/Preethi.jpeg" alt="">
 
                     <h3>Preethi Gurumurthy</h3>
-                    <h4>Core Member</h4>
+                    <h4>Vice President</h4>
 
                     <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
                     </ul>
@@ -236,8 +174,21 @@
                     </ul>
                 </div><!-- .team-member -->
             </div><!-- .col -->
+        </div><!-- .row -->
+        
+        <div class = "row">
+            <div class="col-12 col-md-6 col-lg-3">
+                <div class="team-member">
+                    <img src="./images/Team/Rushendra.jpeg" alt="">
 
-        </div>
+                    <h3>Rushendra Sidibomma</h3>
+                    <h4>Core Member</h4>
+
+                    <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
+                    </ul>
+                </div><!-- .team-member -->
+            </div><!-- .col -->
+
     </div><!-- .container -->
 
     <div class="clients-logo">
