Changes in title of club heads

--- a/about.html
+++ b/about.html
@@ -132,7 +132,7 @@
                     <img src="./images/Team/Shreyas.jpg" alt="">
 
                     <h3>Shreyas MS</h3>
-                    <h4>President</h4>
+                    <h4>Club Head</h4>
 
                     <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
                     </ul>
@@ -144,7 +144,7 @@
                     <img src="./images/Team/Preethi.jpeg" alt="">
 
                     <h3>Preethi Gurumurthy</h3>
-                    <h4>Vice President</h4>
+                    <h4>Assistant Club Head</h4>
 
                     <ul class="p-0 m-0 d-flex justify-content-center align-items-center">
                     </ul>
