--- a/about.html
+++ b/about.html
@@ -179,7 +179,7 @@
         <div class = "row">
             <div class="col-12 col-md-6 col-lg-3">
                 <div class="team-member">
-                    <img src="./images/Team/Rushendra.jpeg" alt="">
+                    <img src="./images/Team/Rushendra.jpeg.png" alt="">
 
                     <h3>Rushendra Sidibomma</h3>
                     <h4>Core Member</h4>
