Update and rename index - Copy.html to index.html

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
                         <div class="col-3 col-lg-9 flex justify-content-end align-content-center">
                             <nav class="site-navigation flex justify-content-end align-items-center">
                                 <ul class="flex flex-column flex-lg-row justify-content-lg-end align-content-center">
-                                    <li><a href="index - Copy.html">Home</a></li>
-                                    <li class="current-menu-item"><a href="./index - Copy.html">Home</a></li>
+                                    <li><a href="index.html">Home</a></li>
+                                    <li class="current-menu-item"><a href="./index.html">Home</a></li>
                                     <li><a href="./about.html">About</a></li>
                                     <li><a href="./blog.html">Blog</a></li>
                                     <li><a href="./resources.html">Resources</a></li>
