--- a/Join Us.html
+++ b/Join Us.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>About</title>
+    <title>Join</title>
 
     <!-- Required meta tags -->
     <meta charset="utf-8">
