--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
                             <h4 class="card-main-title">DEEP LEARNING</h4>
                         </div>
                         <p class="card-content">Deep learning has revolutionized industries by enabling systems to perform tasks with human-like accuracy, including autonomous vehicles and sophisticated recommendation systems.</p>
-                        <p>Right click and on read more below & open in new tab to view</p>
+                        <p>Right click on read more below & open in new tab to view</p>
                         <a href="pdfs/EPOCH DL DOMAIN.pdf"  target="_blank" class="read-more-btn">Read More</a>
                     </figcaption>
                     <span class="after"></span>
@@ -252,7 +252,7 @@
                             <h4 class="card-main-title">AI FOR SOCIETY</h4>
                         </div>
                         <p class="card-content">The ethical implementation of AI technologies aims to promote social good by ensuring equitable access and minimizing biases, thereby fostering a more inclusive and just society.</p>
-                        <p>Right click and on read more below & open in new tab to view</p>
+                        <p>Right click on read more below & open in new tab to view</p>
                         <a href="pdfs/Society.pdf" class="read-more-btn">Read More</a>
                     </figcaption>
                     <span class="after"></span>
@@ -266,7 +266,7 @@
                             <h4 class="card-main-title">NLP+GEN AI</h4>
                         </div>
                         <p class="card-content">Natural Language Processing (NLP) combined with Generative AI (GenAI) enables machines to not only understand but also create human-like text, revolutionizing content creation & communication.</p>
-                        <p>Right click and on read more below & open in new tab to view</p>
+                        <p>Right click on read more below & open in new tab to view</p>
                         <a href="pdfs/NLP + GENAI.pdf" class="read-more-btn">Read More</a>
                     </figcaption>
                     <span class="after"></span>
@@ -280,7 +280,7 @@
                             <h4 class="card-main-title">COMPUTER VISION</h4>
                         </div>
                         <p class="card-content">Computer vision technology enables machines to interpret and analyze visual information from the world, facilitating advancements in fields like autonomous driving and facial recognition.</p>
-                        <p>Right click and on read more below & open in new tab to view</p>
+                        <p>Right click on read more below & open in new tab to view</p>
                         <a href="pdfs/Computer Vision.pdf" class="read-more-btn">Read More</a>
                     </figcaption>
                     <span class="after"></span>
@@ -295,7 +295,7 @@
                             <h4 class="card-main-title">NEURONAUTS</h4>
                         </div>
                         <p class="card-content">Neuronauts are pioneers exploring the intersection of neuroscience and technology, aiming to enhance cognitive abilities and mental well-being through advanced brain-computer interfaces.</p>
-                        <p>Right click and on read more below & open in new tab to view</p>
+                        <p>Right click on read more below & open in new tab to view</p>
                         <a href="pdfs/Neuronaut.pdf" class="read-more-btn">Read More</a>
                     </figcaption>
                     <span class="after"></span>
@@ -309,7 +309,7 @@
                             <h4 class="card-main-title">DESIGN & PR</h4>
                         </div>
                         <p class="card-content">Effective design amplifies public relations efforts by creating visually compelling content that enhances brand messaging and engages target audiences.</p>
-                        <p>Right click and on read more below & open in new tab to view</p>
+                        <p>Right click on read more below & open in new tab to view</p>
                         <a style="color: white;" href="#" class="read-more-btn">Read More</a>
                     </figcaption>
                     <span class="after"></span>
